kubernetes/apps/media/seerr/app/route.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: seerr
  namespace: media
  annotations:
    external-dns.alpha.kubernetes.io/enabled: "true"
spec:
  parentRefs:
    - name: shared
      namespace: gateway
      sectionName: https
  hostnames:
    - seerr.blackcats.cc
  rules:
    - backendRefs:
        - name: seerr
          port: 5055
